# spire-remote-code

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  install.sh  spire-permission-test-123.txt
.github/workflows/: release.yml
.superpowers/brainstorm/40281-1775061230/: .server-info  input-style-comparison.html
.superpowers/brainstorm/46591-1775061898/: .server-stopped  input-design-detail.html  input-style-comparison.html
bridge/: bridge.ts  package-lock.json  package.json  tsconfig.json
docs/: pending-review.md
docs/superpowers/plans/: 2026-04-02-chat-input-redesign.md
docs/superpowers/specs/: 2026-04-02-chat-input-redesign.md  2026-04-02-dx-dev-workflow-session-persistence-design.md
npm/: .npmignore  package.json  postinstall.js
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
scripts/: debug-hook.sh  install.sh  permission-hook.sh  uninstall.sh
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  terminal.rs  upload.rs
src/auth/: jwt.rs  middleware.rs  routes.rs
src/bridge/: mod.rs  registry.rs  routes.rs  sse.rs
src/jsonl/: parser.rs  watcher.rs
src/push/: routes.rs
src/session/: mod.rs  projects.rs  spawner.rs  tmux.rs
src/ws/: handler.rs  hub.rs
tests/: auth_test.rs  bridge_test.rs  channel_test.rs  jsonl_test.rs  path_test.rs  upload_test.rs  ws_test.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/hooks/: use-auth.ts  use-sessions.ts  use-sessions.tsx  use-settings.ts  use-websocket.tsx
(+37 files in other folders)
